...
  onToggleGallerySortMode,
  onEditView,
}) => {
  if (currentView === "create") {
    return (
      <View style={[styles.navigationContainer, { paddingTop: insets.top + 10 }]}>
        <TouchableOpacity testID="gallery-nav-button" onPress={onGalleryView}>
          <Text style={styles.navigationText}>Gallery</Text>
        </TouchableOpacity>

        {/* Show Back button when in new image mode, otherwise show New button */}
        {isInNewImageMode ? (
          <TouchableOpacity onPress={onBackImage}>
...
              ? "Oldest"
              : gallerySortMode === "favorites"
              ? "Favorites"
              : "Random"}
          </Text>
        </TouchableOpacity>
        <TouchableOpacity testID="edit-nav-button" onPress={onEditView}>
          <Text style={styles.navigationText}>{activeImageId ? "Edit" : "New"}</Text>
        </TouchableOpacity>
      </View>
    );
  }

...
